# helix

./: .gitattributes  .gitignore  .gitmodules  .vimrc  CMakeLists.txt  README.md  a.c  a.out  f.c
cmake/: antlr4.cmake  clang.cmake  spdlog.cmake  tracy.cmake
contrib/bwilks/: .gitignore  Annotated Array Sum.txt  EVALUATION ORDER NOTES.txt  Instruction Selection.txt  Links.txt  RunN.bat  Slow Trace.tracy  crash (linear register allocation).txt  liveness.py  todo.txt
docs/: Contents Page.docx  Dealing With Pointers.txt  Doxyfile  Load Effective Address.txt  [Analysis] Liveness Analysis.md  [Transform] Combine Returns.md  [Transform] Hoist Stack Allocations.md  [Transform] Linear Scan Register Allocation.md  [Transform] TEMPLATE.md  [Transform][ARM] Constant Hoisting.md
proto/: constprop.py  liveness.py
src/: CMakeLists.txt  arm-split-constants.cpp  arm-split-constants.h  arm.cpp  arm.md  basic-block.cpp  basic-block.h  basic_block.cpp  basic_block.h  clang-frontend.cpp  clang_frontend.cpp  core.h  dce.cpp  dce.h  emit.cpp  emit.h  frontend.h  function.cpp  function.h  genlower.cpp  genlower.h  hash.h  helix-config.in.h  helix.cpp  helix.h  insns.def  instruction-index.cpp  instruction-index.h  instructions.cpp  instructions.h  interval.cpp  interval.h  intrusive-list.h  intrusive_list.h  ir-helpers.cpp  ir-helpers.h  iterator-range.h  linear-scan.cpp  linear-scan.h  lower.cpp  (+42 more)
src/c/: CMakeLists.txt  clang-frontend.cpp  clang-frontend.h
src/hxc/: CMakeLists.txt  main.cpp
src/irc/: CMakeLists.txt  IR.g4  IR.interp  IRBaseVisitor.cpp  IRBaseVisitor.h  IRLexer.cpp  IRLexer.h  IRLexer.interp  IRLexer.tokens  IRParser.cpp  IRParser.h  IRVisitor.cpp  IRVisitor.h  ir-frontend.cpp  ir-frontend.h
src/libc/: CMakeLists.txt  Makefile  libc.c  start.c  start.s  stdlib.c  string.c  sys.h
src/libc/include/: stddef.h  stdint.h  stdlib.h  string.h
src/tests/: CMakeLists.txt  main.cpp  test-basic-block.cpp  test-bytecode.cpp  test-constant-int.cpp  test-function.cpp  test-instruction-index.cpp  test-instructions.cpp  test-interval.cpp  test-intrusive-list.cpp  test-ir-helpers.cpp  test-linear-scan.cpp  test-mir.cpp  test-print.cpp  test-stack-frame.cpp  test-types.cpp  test-value.cpp  test_bytecode.cpp  test_function.cpp  test_intrusive_list.cpp  test_value.cpp
testsuite/: README.md  f.c  t.c
testsuite/f0/: f0001-basic-arithmetic.c  f0001-basic-arithmetic.xml  f0002-order-of-operations.c  f0002-order-of-operations.xml  f0003-arithmetic-parens.c  f0003-arithmetic-parens.xml  f0004-variable-reassignment.c  f0004-variable-reassignment.xml  f0005-integer-comparison.c  f0005-integer-comparison.xml  f0006-multi-variable-declarations.xml  f0007-array-indexing.c  f0007-array-indexing.xml  f0008-passing-arrays-as-parameters.xml  f0009-increment-decrement.xml  f0010-compound-operators.c  f0010-compound-operators.xml  f0011-unary-operators.c  f0011-unary-operators.xml
testsuite/f0-lang/: f0001-basic-arithmetic.xml  f0002-order-of-operations.xml  f0003-arithmetic-parens.xml  f0004-variable-reassignment.c  f0004-variable-reassignment.xml  f0006-multi-variable-declarations.c  f0006-multi-variable-declarations.xml  f0008-passing-arrays-as-parameters.c  f0008-passing-arrays-as-parameters.xml  f0009-increment-decrement.c  f0009-increment-decrement.xml  f0010-compound-operators.xml  f0011-unary-operators.xml  f0012-integral-casts-small-to-big.c  f0012-integral-casts-small-to-big.xml
testsuite/f1/: f1001-if-stmt-then-else.xml  f10014-do-loop.c  f10014-do-loop.xml  f1002-nested-if-stmt-then-else.c  f1002-nested-if-stmt-then-else.xml  f1003-if-stmt-then.c  f1003-if-stmt-then.xml  f1004-while-loop.c  f1004-while-loop.xml  f1005-for-loop.c  f1005-for-loop.xml  f1006-while-loop-break.xml  f1007-for-loop-break.xml  f1008-while-loop-continue.c  f1008-while-loop-continue.xml  f1009-for-loop-continue.c  f1009-for-loop-continue.xml  f1010-void-function-call-no-args.xml  f1011-non-void-function-call-no-args.xml  f1012-non-void-function-simple-args.xml  f1013-sizeof.c  f1013-sizeof.xml  f1014-do-loop.xml  f1015-goto.xml  f1016-for-loop-with-missing-parts.c  f1016-for-loop-with-missing-parts.xml
testsuite/f1-lang/: f1001-if-stmt-then-else.c  f1002-nested-if-stmt-then-else.c  f1002-nested-if-stmt-then-else.xml  f1005-for-loop.c  f1006-while-loop-break.c  f1006-while-loop-break.xml  f1007-for-loop-break.c  f1008-while-loop-continue.xml  f1009-for-loop-continue.xml  f1010-void-function-call-no-args.c  f1011-non-void-function-call-no-args.c  f1011-non-void-function-call-no-args.xml  f1012-non-void-function-simple-args.c  f1012-non-void-function-simple-args.xml  f1015-goto.xml
testsuite/f2/: f2001-character-types.c  f2001-character-types.xml  f2002-short-types.xml  f2003-int-types.c  f2003-int-types.xml  f2004-long-types.c  f2004-long-types.xml  f2005-pointer-types.c  f2005-pointer-types.xml  f2006-constant-array.xml  f2007-multidimensonal-arrays.c  f2007-multidimensonal-arrays.xml  f2008-string-literals.c  f2008-string-literals.xml  f2009-array-initializers.c  f2009-array-initializers.xml  f2010-struct-initializers.c  f2010-struct-initializers.xml
testsuite/f2-lang/: f2001-character-types.c  f2002-short-types.c  f2002-short-types.xml  f2003-int-types.c  f2003-int-types.xml  f2004-long-types.xml  f2005-pointer-types.c  f2006-constant-array.c  f2006-constant-array.xml  f2007-multidimensonal-arrays.xml  f2010-struct-initializers.c  f2010-struct-initializers.xml
testsuite/f3/: f3001-sum-array.c  f3001-sum-array.xml
testsuite/f3-misc/: f3001-sum-array.xml
testsuite/f4/: f4000-basic-struct-definition.c  f4000-basic-struct-definition.xml  f4001-struct-member-access.c  f4001-struct-member-access.xml  f4002-unnamed-structs.c  f4003-enums.c  (+3 more)
testsuite/f4-lang/: f4001-struct-member-access.xml  f4003-enums.xml  f4004-global-variables.c  f4004-global-variables.xml
tools/: BuildLLVM.bat  BuildLLVM_Debug.bat  BuildLLVM_Release.bat  PrintLocalBenchmark.bat  RunLocalBenchmark.bat  RunUnitTests.bat  TestAll.bat  Testify.bat  VisualiseCFG.bat  antlr4.bat  build.bat  configure.bat  hxc.bat  run-antlr4.bat  run-arm.sh
(+114 files in other folders)
